changed "orange" to "blue"-- more accurate

--- a/css/style.css
+++ b/css/style.css
@@ -110,12 +110,12 @@ a:hover {
   display: none;
 }
 
-.orange {
+.blue {
   background-color: #668cff;
   color: #fff;
 }
 
-.orange-text {
+.blue-text {
   color: #668cff;
 }
 
